--- a/public/config.json
+++ b/public/config.json
@@ -4,28 +4,28 @@
         "猫丸タロットカード「MOON」"
     ],
     "SUN":[
-        ["Chariot","Chariot"],
-        ["Death","Death"],
-        ["Devil","Devil"],
-        ["Emperor","Emperor"],
-        ["Empress","Empress"],
-        ["Fool","Fool"],
-        ["Fortune","Fortune"],
-        ["HangedMan","HangedMan"],
-        ["Hermit","Hermit"],
-        ["Hierophant","Hierophant"],
-        ["Judgement","Judgement"],
-        ["Justice","Justice"],
-        ["Lovers","Lovers"],
-        ["Magician","Magician"],
-        ["Moon","MOON"],
-        ["Priestess","Priestess"],
-        ["Star","Star"],
-        ["Strength","Strength"],
-        ["Sun","SUN"],
-        ["Temperance","Temperance"],
-        ["Tower","Tower"],
-        ["World","World"]
+        ["Chariot",""],
+        ["Death",""],
+        ["Devil",""],
+        ["Emperor",""],
+        ["Empress",""],
+        ["Fool",""],
+        ["Fortune",""],
+        ["HangedMan",""],
+        ["Hermit",""],
+        ["Hierophant",""],
+        ["Judgement",""],
+        ["Justice",""],
+        ["Lovers",""],
+        ["Magician",""],
+        ["Moon",""],
+        ["Priestess",""],
+        ["Star",""],
+        ["Strength",""],
+        ["Sun",""],
+        ["Temperance",""],
+        ["Tower",""],
+        ["World",""]
     ],
     "MOON":[
         ["Chariot2", ""],
