--- a/public/config.json
+++ b/public/config.json
@@ -8,7 +8,7 @@
             "Fool",
             "0.愚者 - 出会い・冒険・自由",
             "正位置：冒険、新しい始まり、素晴らしい未来への道、未成熟、無知、自己表現、創造性、自由、自己探求、精神的成長、忍耐、直感、信仰、冒険心。\n\n逆位置：無駄な冒険、散漫さ、未熟さ\n\n数秘術としての意味「0」：無限の可能性、空白の状態、全体性",
-            "【愚者の絵柄に含まれている主な要素】\n1. 青空や丘の風景：自由気ままな旅をしている愚者の広大な世界観を表現しています。\n2. 手持ちの袋や杖、小犬：愚者が旅に必要な物や、彼がどこへ向かっているかを示す道標のようなものです。\n3. 頭の上に掲げた白い花：いつでも新しい出発をするのに必要な、純粋で無垢な心を象徴しています。\n4. 愚者自身の表情：明るく、穏やかで、まだ何も知らず何も恐れない、楽天主義的な印象を与えます。\n5. さまざまなエッセンス：愚者の周りに描かれた美しい風景、たくさんの動物や花、人々など、その象徴的な意味合いをさらに強化する要素が含まれています。"
+            "【愚者の絵柄に含まれている主な要素】\n\n1. 青空や丘の風景：自由気ままな旅をしている愚者の広大な世界観を表現しています。\n2. 手持ちの袋や杖、小犬：愚者が旅に必要な物や、彼がどこへ向かっているかを示す道標のようなものです。\n3. 頭の上に掲げた白い花：いつでも新しい出発をするのに必要な、純粋で無垢な心を象徴しています。\n4. 愚者自身の表情：明るく、穏やかで、まだ何も知らず何も恐れない、楽天主義的な印象を与えます。\n5. さまざまなエッセンス：愚者の周りに描かれた美しい風景、たくさんの動物や花、人々など、その象徴的な意味合いをさらに強化する要素が含まれています。"
         ],
         [
             "Magician",
@@ -142,7 +142,7 @@
             "Fool2",
             "0.愚者 - 出会い・冒険・自由",
             "正位置：冒険、新しい始まり、素晴らしい未来への道、未成熟、無知、自己表現、創造性、自由、自己探求、精神的成長、忍耐、直感、信仰、冒険心。\n\n逆位置：無駄な冒険、散漫さ、未熟さ\n\n数秘術としての意味「0」：無限の可能性、空白の状態、全体性",
-            "【愚者の絵柄に含まれている主な要素】\n1. 青空や丘の風景：自由気ままな旅をしている愚者の広大な世界観を表現しています。\n2. 手持ちの袋や杖、小犬：愚者が旅に必要な物や、彼がどこへ向かっているかを示す道標のようなものです。\n3. 頭の上に掲げた白い花：いつでも新しい出発をするのに必要な、純粋で無垢な心を象徴しています。\n4. 愚者自身の表情：明るく、穏やかで、まだ何も知らず何も恐れない、楽天主義的な印象を与えます。\n5. さまざまなエッセンス：愚者の周りに描かれた美しい風景、たくさんの動物や花、人々など、その象徴的な意味合いをさらに強化する要素が含まれています。"
+            "【愚者の絵柄に含まれている主な要素】\n\n1. 青空や丘の風景：自由気ままな旅をしている愚者の広大な世界観を表現しています。\n2. 手持ちの袋や杖、小犬：愚者が旅に必要な物や、彼がどこへ向かっているかを示す道標のようなものです。\n3. 頭の上に掲げた白い花：いつでも新しい出発をするのに必要な、純粋で無垢な心を象徴しています。\n4. 愚者自身の表情：明るく、穏やかで、まだ何も知らず何も恐れない、楽天主義的な印象を与えます。\n5. さまざまなエッセンス：愚者の周りに描かれた美しい風景、たくさんの動物や花、人々など、その象徴的な意味合いをさらに強化する要素が含まれています。"
         ],
         [
             "Magician2",
@@ -274,7 +274,7 @@
             "Fool3",
             "0.愚者 - 出会い・冒険・自由",
             "正位置：冒険、新しい始まり、素晴らしい未来への道、未成熟、無知、自己表現、創造性、自由、自己探求、精神的成長、忍耐、直感、信仰、冒険心。\n\n逆位置：無駄な冒険、散漫さ、未熟さ\n\n数秘術としての意味「0」：無限の可能性、空白の状態、全体性",
-            "【愚者の絵柄に含まれている主な要素】\n1. 青空や丘の風景：自由気ままな旅をしている愚者の広大な世界観を表現しています。\n2. 手持ちの袋や杖、小犬：愚者が旅に必要な物や、彼がどこへ向かっているかを示す道標のようなものです。\n3. 頭の上に掲げた白い花：いつでも新しい出発をするのに必要な、純粋で無垢な心を象徴しています。\n4. 愚者自身の表情：明るく、穏やかで、まだ何も知らず何も恐れない、楽天主義的な印象を与えます。\n5. さまざまなエッセンス：愚者の周りに描かれた美しい風景、たくさんの動物や花、人々など、その象徴的な意味合いをさらに強化する要素が含まれています。"
+            "【愚者の絵柄に含まれている主な要素】\n\n1. 青空や丘の風景：自由気ままな旅をしている愚者の広大な世界観を表現しています。\n2. 手持ちの袋や杖、小犬：愚者が旅に必要な物や、彼がどこへ向かっているかを示す道標のようなものです。\n3. 頭の上に掲げた白い花：いつでも新しい出発をするのに必要な、純粋で無垢な心を象徴しています。\n4. 愚者自身の表情：明るく、穏やかで、まだ何も知らず何も恐れない、楽天主義的な印象を与えます。\n5. さまざまなエッセンス：愚者の周りに描かれた美しい風景、たくさんの動物や花、人々など、その象徴的な意味合いをさらに強化する要素が含まれています。"
         ],
         [
             "Magician3",
